arr/bazarr/bazarr-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  namespace: arr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  serviceName: bazarr
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
        app.kubernetes.io/part-of: arr
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: bazarr
          image: linuxserver/bazarr:latest
          ports:
            - containerPort: 6767
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
      volumes:
        - name: config
          nfs:
            path: /export/Kubernetes/arr/bazarr
            server: 192.168.86.107
        - name: media
          nfs:
            path: /export/Media/Completed
            server: 192.168.86.107
