arr/bazarr/bazarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: arr
spec:
  selector:
    app: bazarr
  ports:
    - protocol: TCP
      port: 6767
      targetPort: 6767
