arr/bazarr/bazarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.flexflix.top`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
      middlewares:
        - name: authentik
          namespace: authentik
